--- a/src/assets/styles/custom.scss
+++ b/src/assets/styles/custom.scss
@@ -1,7 +1,6 @@
-@import "~bootstrap/scss/bootstrap";
-
 $primary: #c19655;
 $secondary: #4D4D4DFF;
 $light: #ededed;
 $dark: #000000;
 
+@import "bootstrap/scss/bootstrap";
